name:                cspgen
version:             0.3.0.1
synopsis:            A tool for translating imperative programs to CSP
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable cspgen
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2
  extensions: NamedFieldPuns, TupleSections, DoAndIfThenElse, GADTs,
              TypeFamilies, FlexibleContexts, ViewPatterns
  other-modules: 
  build-depends: base >=4.6,
                 cspretty >= 0.3.3,
                 hashable >=1.1,
                 mtl >=2.2,
                 parsec >=3.1,
                 transformers >=0.3,
                 pretty >=1.1,
                 containers >=0.5,
                 bytestring >=0.10,
                 language-c >=0.5,
                 process >=1.1,
                 unix >=2.6,
                 filepath >= 1.3,
                 hoopl >= 3.10.1,
                 tasty >= 0.10,
                 tasty-hunit >= 0.9,
                 directory >= 1.2,
                 llvm-general >= 3.4 && < 3.5,
                 llvm-general-pure >= 3.4 && < 3.5

test-suite CParseTest
  type:          exitcode-stdio-1.0
  main-is:       CParseTest/Main.hs
  hs-source-dirs: src, src/Tests
  ghc-options:   -Wall -O2
  extensions:    NamedFieldPuns, TupleSections, DoAndIfThenElse, GADTs,
                 TypeFamilies, FlexibleContexts, ViewPatterns
  other-modules:
  build-depends: base >=4.6,
                 cspretty >= 0.3.2,
                 hashable >=1.1,
                 mtl >=2.2,
                 parsec >=3.1,
                 transformers >=0.3,
                 pretty >=1.1,
                 containers >=0.5,
                 bytestring >=0.10,
                 language-c >=0.5,
                 process >=1.1,
                 unix >=2.6,
                 filepath >= 1.3,
                 hoopl >= 3.10.1,
                 Cabal,
                 tasty >= 0.10,
                 tasty-hunit >= 0.9

test-suite CSPGenTest
  type:           exitcode-stdio-1.0
  main-is:        Tests/CSPGenTest/Main.hs
  hs-source-dirs: src, src/Tests
  ghc-options:    -Wall -O2
  extensions:     NamedFieldPuns, TupleSections, DoAndIfThenElse, GADTs,
                  TypeFamilies, FlexibleContexts, ViewPatterns

  other-modules:
  build-depends: base >=4.6,
                 cspretty >= 0.3.2,
                 hashable >=1.1,
                 mtl >=2.2,
                 parsec >=3.1,
                 transformers >=0.3,
                 pretty >=1.1,
                 containers >=0.5,
                 bytestring >=0.10,
                 language-c >=0.5,
                 process >=1.1,
                 unix >=2.6,
                 filepath >= 1.3,
                 hoopl >= 3.10.1,
                 Cabal,
                 tasty >= 0.10,
                 tasty-hunit >= 0.9,
                 directory >= 1.2
